// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`default/SimpleES6: /out.js 1`] = `
"// foo.js
function fn2() {
  return 123;
}

// entry.js
console.log(fn2());
"
`;

exports[`default/SimpleCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// foo.js
var require_foo = __commonJS((exports, module) => {
  module.exports = function() {
    return 123;
  };
});
// entry.js
var fn = require_foo();
console.log(fn());
"
`;

exports[`default/NestedCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// foo.js
var require_foo = __commonJS((exports, module) => {
  module.exports = function() {
    return 123;
  };
});
// entry.js
function nestedScope() {
  const fn = require_foo();
  console.log(fn());
}
nestedScope();
"
`;

exports[`default/NewExpressionCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// foo.js
var require_foo = __commonJS((exports, module) => {
  class Foo {
  }
  module.exports = { Foo };
});
// entry.js
new (require_foo()).Foo;
"
`;

exports[`default/CommonJSFromES6: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __toCommonJS = (from) => {
  var to = __defProp({}, "__esModule", { value: true });
  var desc = { enumerable: false };
  if (from && typeof from === "object" || typeof from === "function") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key))
        __defProp(to, key, {
          get: () => from[key],
          enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
        });
  }
  return to;
};
var __export = (target, all) => {
  for (var name2 in all)
    __defProp(target, name2, {
      get: all[name2],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name2] = () => newValue
    });
};
var __esm = (fn, res) => () => (fn && (res = fn(fn = 0)), res);

// foo.js
var exports_foo = {};
__export(exports_foo, {
  foo: () => {
    {
      return foo;
    }
  }
});
function foo() {
  return "foo";
}
var init_foo2 = __esm(() => {
});

// bar.js
var exports_bar = {};
__export(exports_bar, {
  bar: () => {
    {
      return bar;
    }
  }
});
function bar() {
  return "bar";
}
var init_bar2 = __esm(() => {
});
// entry.js
var { foo: foo2 } = (init_foo2(), __toCommonJS(exports_foo));
console.log(foo2(), bar2());
var { bar: bar2 } = (init_bar2(), __toCommonJS(exports_bar));
"
`;

exports[`default/ES6FromCommonJS: /out.js 1`] = `
"// foo.js
var foo3 = function() {
  return "foo";
};

// bar.js
var bar3 = function() {
  return "bar";
};

// entry.js
console.log(foo3(), bar3());
"
`;

exports[`default/NestedES6FromCommonJS: /out.js 1`] = `
"// foo.js
var fn2 = function() {
  return 123;
};

// entry.js
(() => {
  console.log(fn2());
})();
"
`;

exports[`default/ExportFormsES6: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __export = (target, all) => {
  for (var name2 in all)
    __defProp(target, name2, {
      get: all[name2],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name2] = () => newValue
    });
};
// a.js
var abc = undefined;
// b.js
var exports_b2 = {};
__export(exports_b2, {
  xyz: () => {
    {
      return xyz;
    }
  }
});
var xyz = null;

// entry.js
var entry_default = 123;
var v = 234;
var l = 345;
var c = 456;
function Fn() {
}

class Class {
}
export {
  v,
  l,
  entry_default as default,
  c,
  exports_b2 as b,
  abc,
  Fn,
  Class,
  Class as C
};
"
`;

exports[`default/ExportFormsCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __toCommonJS = (from) => {
  var to = __defProp({}, "__esModule", { value: true });
  var desc = { enumerable: false };
  if (from && typeof from === "object" || typeof from === "function") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key))
        __defProp(to, key, {
          get: () => from[key],
          enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
        });
  }
  return to;
};
var __export = (target, all) => {
  for (var name2 in all)
    __defProp(target, name2, {
      get: all[name2],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name2] = () => newValue
    });
};
var __esm = (fn, res) => () => (fn && (res = fn(fn = 0)), res);

// a.js
var abc;
var init_a2 = __esm(() => {
  abc = undefined;
});

// b.js
var exports_b2 = {};
__export(exports_b2, {
  xyz: () => {
    {
      return xyz;
    }
  }
});
var xyz;
var init_b2 = __esm(() => {
  xyz = null;
});

// commonjs.js
var exports_commonjs = {};
__export(exports_commonjs, {
  v: () => {
    {
      return v;
    }
  },
  l: () => {
    {
      return l;
    }
  },
  default: () => {
    {
      return commonjs_default;
    }
  },
  c: () => {
    {
      return c;
    }
  },
  b: () => {
    {
      return exports_b2;
    }
  },
  abc: () => {
    {
      return abc;
    }
  },
  Fn: () => {
    {
      return Fn;
    }
  },
  Class: () => {
    {
      return Class;
    }
  },
  C: () => {
    {
      return Class;
    }
  }
});
function Fn() {
}

class Class {
}
var commonjs_default, v, l, c;
var init_commonjs2 = __esm(() => {
  init_a2();
  init_b2();
  commonjs_default = 123;
  v = 234;
  l = 345;
  c = 456;
});

// c.js
var exports_c = {};
__export(exports_c, {
  default: () => {
    {
      return c_default;
    }
  }
});

class c_default {
}
var init_c2 = __esm(() => {
});

// d.js
var exports_d = {};
__export(exports_d, {
  default: () => {
    {
      return Foo2;
    }
  }
});

class Foo2 {
}
var init_d2 = __esm(() => {
  Foo2.prop = 567;
});

// e.js
var exports_e = {};
__export(exports_e, {
  default: () => {
    {
      return e_default2;
    }
  }
});
function e_default2() {
}
var init_e2 = __esm(() => {
});

// f.js
var exports_f = {};
__export(exports_f, {
  default: () => {
    {
      return foo2;
    }
  }
});
function foo2() {
}
var init_f2 = __esm(() => {
  foo2.prop = 678;
});

// g.js
var exports_g = {};
__export(exports_g, {
  default: () => {
    {
      return g_default2;
    }
  }
});
async function g_default2() {
}
var init_g2 = __esm(() => {
});

// h.js
var exports_h = {};
__export(exports_h, {
  default: () => {
    {
      return foo3;
    }
  }
});
async function foo3() {
}
var init_h2 = __esm(() => {
  foo3.prop = 789;
});
// entry.js
var commonjs = (init_commonjs2(), __toCommonJS(exports_commonjs));
var c2 = (init_c2(), __toCommonJS(exports_c)).default;
var d = (init_d2(), __toCommonJS(exports_d)).default;
var e = (init_e2(), __toCommonJS(exports_e)).default;
var f = (init_f2(), __toCommonJS(exports_f)).default;
var g = (init_g2(), __toCommonJS(exports_g)).default;
var h = (init_h2(), __toCommonJS(exports_h)).default;
assert.deepEqual(commonjs.default, 123, "commonjs.default");
assert.deepEqual(commonjs.v, 234, "commonjs.default");
assert.deepEqual(commonjs.l, 345, "commonjs.l");
assert.deepEqual(commonjs.c, 456, "commonjs.c");
commonjs.Fn();
new commonjs.C;
new commonjs.Class;
new commonjs.C;
assert("abc" in commonjs, "commonjs.abc");
assert.deepEqual(commonjs.abc, undefined, "commonjs.abc");
assert.deepEqual(commonjs.b, { xyz: null }, "commonjs.b");
new c2;
new d;
assert.deepEqual(d.prop, 567, "d.prop");
e();
f();
assert.deepEqual(f.prop, 678, "f.prop");
assert(g() instanceof Promise, "g");
assert(h() instanceof Promise, "h");
assert.deepEqual(h.prop, 789, "h.prop");
"
`;

exports[`default/ExportChain: /out.js 1`] = `
"// bar.js
var c = 123;
export {
  c as a
};
"
`;

exports[`default/JSXImportsCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __toESM = (mod, isNodeMode, target) => {
  target = mod != null ? __create(__getProtoOf(mod)) : {};
  const to = isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", { value: mod, enumerable: true }) : target;
  for (let key of __getOwnPropNames(mod))
    if (!__hasOwnProp.call(to, key))
      __defProp(to, key, {
        get: () => mod[key],
        enumerable: true
      });
  return to;
};
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// custom-react.js
var require_custom_react = __commonJS((exports, module) => {
  module.exports = {
    elem: (...args) => console.log("elem", ...args),
    frag: "frag"
  };
});
// entry.jsx
var custom_react = __toESM(require_custom_react());
console.log($jsx("div", {}, undefined, false, undefined, this), $jsx(JSXFrag, {
  children: "fragment"
}, undefined, false, undefined, this));
"
`;

exports[`default/JSXImportsES6: /out.js 1`] = `
"// entry.jsx
console.log($jsx("div", {}, undefined, false, undefined, this), $jsx(JSXFrag, {
  children: "fragment"
}, undefined, false, undefined, this));
"
`;

exports[`default/NodeModules: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __toESM = (mod, isNodeMode, target) => {
  target = mod != null ? __create(__getProtoOf(mod)) : {};
  const to = isNodeMode || !mod || !mod.__esModule ? __defProp(target, "default", { value: mod, enumerable: true }) : target;
  for (let key of __getOwnPropNames(mod))
    if (!__hasOwnProp.call(to, key))
      __defProp(to, key, {
        get: () => mod[key],
        enumerable: true
      });
  return to;
};
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// Users/user/project/node_modules/demo-pkg/index.js
var require_demo_pkg = __commonJS((exports, module) => {
  module.exports = function() {
    return 123;
  };
});
// Users/user/project/src/entry.js
var import_demo_pkg = __toESM(require_demo_pkg());
console.log(import_demo_pkg.default());
"
`;

exports[`default/RequireChildDirCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// Users/user/project/src/dir/index.js
var require_dir = __commonJS((exports, module) => {
  module.exports = 123;
});
// Users/user/project/src/entry.js
console.log(require_dir());
"
`;

exports[`default/RequireChildDirES6: /out.js 1`] = `
"// Users/user/project/src/dir/index.js
var dir_default2 = 123;

// Users/user/project/src/entry.js
console.log(dir_default2);
"
`;

exports[`default/RequireParentDirCommonJS: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// Users/user/project/src/index.js
var require_src = __commonJS((exports, module) => {
  module.exports = 123;
});
// Users/user/project/src/dir/entry.js
console.log(require_src());
"
`;

exports[`default/RequireParentDirES6: /out.js 1`] = `
"// Users/user/project/src/index.js
var src_default2 = 123;

// Users/user/project/src/dir/entry.js
console.log(src_default2);
"
`;

exports[`default/DotImport: /out.js 1`] = `
"// index.js
var x2 = 123;

// entry.js
console.log(x2);
"
`;

exports[`default/RequireWithTemplate: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __toCommonJS = (from) => {
  var to = __defProp({}, "__esModule", { value: true });
  var desc = { enumerable: false };
  if (from && typeof from === "object" || typeof from === "function") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key))
        __defProp(to, key, {
          get: () => from[key],
          enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
        });
  }
  return to;
};
var __export = (target, all) => {
  for (var name2 in all)
    __defProp(target, name2, {
      get: all[name2],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name2] = () => newValue
    });
};
var __esm = (fn, res) => () => (fn && (res = fn(fn = 0)), res);

// b.js
var exports_b = {};
__export(exports_b, {
  x: () => {
    {
      return x;
    }
  }
});
var x;
var init_b2 = __esm(() => {
  x = 123;
});
// a.js
console.log((init_b2(), __toCommonJS(exports_b)).x);
console.log((init_b2(), __toCommonJS(exports_b)).x);
"
`;

exports[`default/ConditionalRequire: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __toCommonJS = (from) => {
  var to = __defProp({}, "__esModule", { value: true });
  var desc = { enumerable: false };
  if (from && typeof from === "object" || typeof from === "function") {
    for (let key of __getOwnPropNames(from))
      if (!__hasOwnProp.call(to, key))
        __defProp(to, key, {
          get: () => from[key],
          enumerable: !(desc = __getOwnPropDesc(from, key)) || desc.enumerable
        });
  }
  return to;
};
var __require = (namespace) => {
  if (__internalIsCommonJSNamespace(namespace))
    return namespace.default();
  return namespace;
};
var __export = (target, all) => {
  for (var name2 in all)
    __defProp(target, name2, {
      get: all[name2],
      enumerable: true,
      configurable: true,
      set: (newValue) => all[name2] = () => newValue
    });
};
var __esm = (fn, res) => () => (fn && (res = fn(fn = 0)), res);

// b.js
var exports_b = {};
__export(exports_b, {
  foo: () => {
    {
      return foo;
    }
  }
});
var foo;
var init_b2 = __esm(() => {
  foo = 213;
});
// a.js
var x = process.argv[2] === "true";
var y = process.argv[3] === "true";
var c = process.argv[4];
console.log((x ? __require("a") : y ? (init_b2(), __toCommonJS(exports_b)) : __require("c")).foo);
console.log((x ? y ? __require("a") : (init_b2(), __toCommonJS(exports_b)) : c).foo);
"
`;

exports[`default/RequireBadArgumentCount: /out.js 1`] = `
"// entry.js
require();
require("a", "b");
try {
  require();
  require("a", "b");
} catch {
}
"
`;

exports[`default/RequireTxt: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __require = (namespace) => {
  if (__internalIsCommonJSNamespace(namespace))
    return namespace.default();
  return namespace;
};
// entry.js
console.log(__require("/tmp/bun-bundler-tests/default/RequireTxt/test.txt"));
"
`;

exports[`default/FalseRequire: /out.js 1`] = `
"// entry.js
((require2) => require2("./test.txt"))(console.log);
"
`;

exports[`default/RequireWithCallInsideTry: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __require = (namespace) => {
  if (__internalIsCommonJSNamespace(namespace))
    return namespace.default();
  return namespace;
};
// entry.js
try {
  const supportsColor = (() => { throw (new Error(\`Cannot require module "not-supports-color"\`)); } )();
  if (supportsColor && (supportsColor.stderr || supportsColor).level >= 2)
    exports_entry.colors = [];
} catch (error) {
}
"
`;

exports[`default/SourceMap: /Users/user/project/out.js 1`] = `
"// Users/user/project/src/bar.js
function bar3() {
  console.log("hi");
}

// Users/user/project/src/entry.js
function foo() {
  bar3();
}
foo();
"
`;

exports[`default/NestedScopeBug: /out.js 1`] = `
"// entry.js
(() => {
  function a() {
    b2();
  }
  var b2 = () => {
  };
  a();
})();
"
`;

exports[`default/HashbangBundle: /out.js 1`] = `
"// code.js
var code3 = 0;

// entry.js
process.exit(code3);
"
`;

exports[`default/HashbangNoBundle: /out.js 1`] = `
"// entry.js
process.exit(0);
"
`;

exports[`default/HashbangBannerUseStrictOrder: /out.js 1`] = `
"// entry.js
foo();
"
`;

exports[`default/ImportFSNodeES6: /out.js 1`] = `
"// entry.js
import"fs";
import* as fs from "fs";
import defaultValue from "fs";
import {readFileSync} from "fs";
console.log("writeFileSync" in fs, readFileSync, "writeFileSync" in defaultValue);
"
`;

exports[`default/ExportFSNode: /out.js 1`] = `
"// entry.js
import {readFileSync}, * as import_fs2 from "fs";
export {
  readFileSync,
  fs
};
"
`;

exports[`default/ExportFSNodeInCommonJSModule: /out.js 1`] = `
"// entry.js
import* as fs from "fs";
import {readFileSync} from "fs";
var fs2 = fs;
var readFileSync2 = readFileSync;
var foo = 123;
export {
  readFileSync2 as readFileSync,
  fs2 as fs,
  foo
};
"
`;

exports[`default/ExportWildcardFSNodeES6: /out.js 1`] = `
"// entry.js
export * from "fs";
"
`;

exports[`default/MinifiedBundleES6: /out.js 1`] = `
"// a.js
function foo2() {
  console.log("call");
  return 123;
}
foo2();

// entry.js
console.log(foo2());
"
`;

exports[`default/RuntimeNameCollisionNoBundle: /out.js 1`] = `
"// entry.js
function __require() {
  return 123;
}
console.log(__require());
"
`;

exports[`default/ThisOutsideFunctionRenamedToExports: /out.js 1`] = `
"var __create = Object.create;
var __descs = Object.getOwnPropertyDescriptors;
var __defProp = Object.defineProperty;
var __getProtoOf = Object.getPrototypeOf;
var __hasOwnProp = Object.prototype.hasOwnProperty;
var __getOwnPropNames = Object.getOwnPropertyNames;
var __getOwnPropDesc = Object.getOwnPropertyDescriptor;
var __commonJS = (cb, mod) => () => (mod || cb((mod = { exports: {} }).exports, mod), mod.exports);

// entry.js
var require_entry = __commonJS((exports) => {
  console.log(exports);
  console.log((x = exports) => exports);
  console.log({ x: exports });
  console.log(class extends exports.foo {
  });
  console.log(class {
    [exports.foo];
  });
  console.log(class {
    [exports.foo]() {
    }
  });
  console.log(class {
    static [exports.foo];
  });
  console.log(class {
    static [exports.foo]() {
    }
  });
});
export default require_entry();
"
`;

exports[`default/ThisOutsideFunctionNotRenamed: /out.js 1`] = `
"// entry.js
class C1 {
  foo = C1;
}

class C2 {
  foo() {
    return this;
  }
}

class C3 {
  static foo = C3;
}

class C4 {
  static foo() {
    return this;
  }
}
var c1 = new C1;
var c2 = new C2;
globalThis.assert(c1 === c1.foo, "c1.foo");
globalThis.assert(c2 === c2.foo(), "c2.foo()");
globalThis.assert(C3.foo === C3, "C3.foo");
globalThis.assert(C4.foo() === C4, "C4.foo()");
"
`;

exports[`default/ReExportFSNode: /out.js 1`] = `
"// foo.js
import {readFileSync}, * as import_fs2 from "fs";
export {
  readFileSync as rfs,
  fs as f
};
"
`;
